# Software-Engineering

./: .gitignore  README.md
C#/Programming Basics with C#/02. Simple Operations And Calculations/: SimpelOperations120119.sln
C#/Programming Basics with C#/03. Simple Operations And Calculations - Exercise/: SimpleOperationsCal.sln
C#/Programming Basics with C#/04. Conditional Statements/: Lecture20190119_IF.sln
C#/Programming Basics with C#/05. Conditional Statements - Exercise/: Conditional Statements - Exercise.sln
C#/Programming Basics with C#/06. Nested Conditional Statements/: Nested-Conditional-Statements-Lab.sln
C#/Programming Basics with C#/07. Nested Conditional Statements - Exercise/: Nested-Conditional-Statements-Ex.sln
C++/: .gitignore
C++/Programming Basics with C++/: .gitignore
C++/Programming Basics with C++/02. Simple Operations and Calculation/: CMakeLists.txt
C++/Programming Basics with C++/02. Simple Operations and Calculation/Birthday/: CMakeLists.txt  main.cpp
C++/Programming Basics with C++/02. Simple Operations and Calculation/CircleAreaAndPerimeter/: CMakeLists.txt  main.cpp
C++/Programming Basics with C++/02. Simple Operations and Calculation/ConcatenateData/: CMakeLists.txt  main.cpp
C++/Programming Basics with C++/02. Simple Operations and Calculation/GreetingByName/: CMakeLists.txt  main.cpp
C++/Programming Basics with C++/02. Simple Operations and Calculation/InchesToCentimeters/: CMakeLists.txt  main.cpp
C++/Programming Basics with C++/02. Simple Operations and Calculation/PetShop/: CMakeLists.txt  main.cpp
C++/Programming Basics with C++/02. Simple Operations and Calculation/ProjectsCreation/: CMakeLists.txt  main.cpp
C++/Programming Basics with C++/02. Simple Operations and Calculation/SquareArea/: CMakeLists.txt
C++/Programming Basics with C++/02. Simple Operations and Calculation/YardGreening/: CMakeLists.txt  main.cpp
C++/Programming Basics with C++/02. Simple Operations and Calculation/simpe_tasks/: Birthday.cpp  CircleAreaAndPerimeter.cpp  ConcatenateData.cpp  GreetingByName.cpp  InchesToCentimeters.cpp  PetShop.cpp  ProjectsCreation.cpp  SquareArea.cpp  YardGreening.cpp
C++/Programming Basics with C++/04. Conditional statements/: CMakeLists.txt
C++/Programming Basics with C++/04. Conditional statements/simple_tasks/: AnimalType.cpp  AreaOfFigures.cpp  DayOfWeek.cpp  EvenOrOdd.cpp  ExcellentResult .cpp  GreaterNumber.cpp  Number100to200 .cpp  NumberToText.cpp  PasswordGuess.cpp  ThreeEqualNumbers.cpp  ToyShop.cpp
C++/Programming Basics with C++/05. Exercise - ConditionalStatement/: CMakeLists.txt
C++/Programming Basics with C++/05. Exercise - ConditionalStatement/simple_tasks/: BonusScore.cpp  GodzillaVsKong.cpp  MetricConverter.cpp  Scholarship.cpp  SpeedInfo.cpp  SumSeconds.cpp  TimePlus15Minutes.cpp  WorldSwimmingRecord.cpp
C++/Programming Basics with C++/07. Exercise - Nested Conditional Statement/: CMakeLists.txt
C++/Programming Basics with C++/07. Exercise - Nested Conditional Statement/simple_task/: Cinema.cpp  FishingBoat.cpp  HotelRoom.cpp  Journey.cpp  NewHouse.cpp  OnTimeForTheExam.cpp  OperationsBetweenNumbers.cpp  PointOnRectangleBorder.cpp  SummerOutfit.cpp  Volleyball.cpp
C++/Programming Basics with C++/08. While-loop/: CMakeLists.txt
C++/Programming Basics with C++/08. While-loop/Simple-Tasks/: AccountBalance.cpp  Graduation.cpp  GraduationPt2.cpp  MaxNumber.cpp  MinNumber.cpp  Moving.cpp  NumberInRange1to100.cpp  Sequence2k-plus-1.cpp
C++/Programming Basics with C++/08. While-loop/simple_tasks/: Sequence2k-plus-1.cpp
C++/Programming Basics with C++/09. Exercise - While-loop/: CMakeLists.txt
C++/Programming Basics with C++/09. Exercise - While-loop/simple-tasks/: Cake.cpp  Coins.cpp  ExamPreparation.cpp  OldBooks.cpp  Vacation.cpp  Walking.cpp
C++/Programming Basics with C++/10. For-loop/: CMakeLists.txt
C++/Programming Basics with C++/10. For-loop/simple_tasks/: CleverLily.cpp  LatinLetters.cpp  LeftAndRightSum.cpp  NumberSequence.cpp  Numbersfrom1to100.cpp  OddEvenSum.cpp  SumNumbers.cpp  VowelsSum.cpp
C++/Programming Basics with C++/11. Exercise - For-loop/: CMakeLists.txt
C++/Programming Basics with C++/11. Exercise - For-loop/simple_tasks/: DivideWithoutRemainder.cpp  EqualPairs.cpp  HalfSumElement.cpp  Histogram.cpp  NimbersEndingIn7.cpp  OddEvenPos.cpp  OddEvenPosition.cpp  Salary.cpp
C++/Programming Basics with C++/12. Nested loops/: CMakeLists.txt
C++/Programming Basics with C++/12. Nested loops/simple_tasks/: Building.cpp  Combination.cpp  CookieFactory.cpp  EvenPowersOf2.cpp  MagicNumbers.cpp  NameWars.cpp  Numbers1toNWithStep3.cpp  NumbersNto1.cpp  Travelling.cpp
C++/Programming Basics with C++/13. Exercise - Nested loops/: CMakeLists.txt
C++/Programming Basics with C++/13. Exercise - Nested loops/simple_task/: Coding.cpp  EqualSumsEvenOddPosition.cpp  EqualSumsLeftRightPosition.cpp  Fishing.cpp  Matrix.cpp  NumberPyramid.cpp  PasswordGenerator.cpp  SpecialNumbers.cpp  SumPrimeNonPrime.cpp  TrainTheTrainers.cpp
Data Structures and Algorithms/: .gitignore
Hibernate & Spring Data/01. DB Apps Introduction/: README.md
JS/JSApplications/other/: commands_npm  (+2 more)
Java/Java Advanced/: .gitignore
Java/Technology Fundamentals with Java/: .gitignore
MySQL/01. Data Definition and Datatypes/: Data_Definition_and_Datatypes_Ex.sql  Data_Definition_and_Datatypes_Lab.sql
MySQL/02. Basic CRUD/: Basic_CRUD_Exercises.sql  Basic_CRUD_Lab.sql
MySQL/03. Built-in functions/: Built-in_Functions_Exercises.sql  Built-in_functions_Lab.sql
MySQL/04. Data Aggregation/: Data_Aggregation.sql  Data_Agregation_Exercises.sql
MySQL/05. Table Relations/: Table_Relations_Exercises.sql  Table_Relations_Lab.sql
MySQL/06. Subqueries and JOINs/: Database_Programmability_and_Transactions_Exercises.sql  Subqueries_and_JOINs_Exercises.sql  Subqueries_and_JOINs_Exercises.txt  Subqueries_and_JOINs_Lab.sql
MySQL/07. Database Programmability and Transactions/: Database_Programmability_and_Transactions_Exercises.sql  Database_Programmability_and_Transactions_Lab.sql
(+2998 files in other folders)
