cmake_minimum_required(VERSION 3.14)
project(11__Exercise___For_loop)

set(CMAKE_CXX_STANDARD 14)

add_executable(EqualPairs simple_tasks/EqualPairs.cpp)
add_executable(DivideWithoutRemainder simple_tasks/DivideWithoutRemainder.cpp)
add_executable(HalfSumElement simple_tasks/HalfSumElement.cpp)
add_executable(Histogram simple_tasks/Histogram.cpp)
add_executable(NimbersEndingIn7 simple_tasks/NimbersEndingIn7.cpp)
add_executable(OddEvenPos simple_tasks/OddEvenPos.cpp)
add_executable(OddEvenPosition simple_tasks/OddEvenPosition.cpp)
add_executable(Salary simple_tasks/Salary.cpp)