cmake_minimum_required(VERSION 3.14)
project(12__Nested_loops)

set(CMAKE_CXX_STANDARD 14)


add_executable(Building simple_tasks/Building.cpp)
add_executable(Combination simple_tasks/Combination.cpp)
add_executable(CookieFactory simple_tasks/CookieFactory.cpp)
add_executable(EvenPowersOf2 simple_tasks/EvenPowersOf2.cpp)
add_executable(MagicNumbers simple_tasks/MagicNumbers.cpp)
add_executable(NameWars simple_tasks/NameWars.cpp)
add_executable(Numbers1toNWithStep3 simple_tasks/Numbers1toNWithStep3.cpp)
add_executable(NumbersNto1 simple_tasks/NumbersNto1.cpp)
add_executable(Travelling simple_tasks/Travelling.cpp)