cmake_minimum_required(VERSION 3.14)
project(13__Exercise___Nested_loops)

set(CMAKE_CXX_STANDARD 14)


add_executable(Coding simple_task/Coding.cpp)
add_executable(EqualSumsEvenOddPosition simple_task/EqualSumsEvenOddPosition.cpp)
add_executable(EqualSumsLeftRightPosition simple_task/EqualSumsLeftRightPosition.cpp)
add_executable(Fishing simple_task/Fishing.cpp)
add_executable(Matrix simple_task/Matrix.cpp)
add_executable(NumberPyramid simple_task/NumberPyramid.cpp)
add_executable(PasswordGenerator simple_task/PasswordGenerator.cpp)
add_executable(SpecialNumbers simple_task/SpecialNumbers.cpp)
add_executable(SumPrimeNonPrime simple_task/SumPrimeNonPrime.cpp)
add_executable(TrainTheTrainers simple_task/TrainTheTrainers.cpp)